--- a/SistemasDistribuidos/nbproject/private/private.properties
+++ b/SistemasDistribuidos/nbproject/private/private.properties
@@ -1,3 +1,3 @@
 compile.on.save=true
 file.reference.mysql-connector-java-5.1.48.jar=C:\\Program Files\\MySQL\\mysql-connector-java-5.1.48\\mysql-connector-java-5.1.48.jar
-user.properties.file=C:\\Users\\Edgar Flores\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\xXEdG\\AppData\\Roaming\\NetBeans\\10.0\\build.properties
